fixed spacing in contact bar

--- a/styles/scss/partials/_contact.scss
+++ b/styles/scss/partials/_contact.scss
@@ -1,8 +1,8 @@
 #contact {
 	background: url("./assets/coffeeAndCode") no-repeat fixed center;
 	background-size: cover;
-	padding-top: 3%;
-	padding-bottom: 3%;
+	padding-top: 50px;
+	padding-bottom: 50px;
 }
 form {
 	display: flex;
