--- a/styles/styles.css
+++ b/styles/styles.css
@@ -607,8 +607,8 @@ header nav {
 #contact {
   background: url("./assets/coffeeAndCode") no-repeat fixed center;
   background-size: cover;
-  padding-top: 3%;
-  padding-bottom: 3%;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 form {
